# autoclicker

./: CMakeLists.txt  README.md
includes/: instruction.hpp  io_manager.hpp  print.hpp
src/: instruction.cpp  io_manager.cpp  main.cpp  print.cpp
